<resources>
    <string name="app_name">Do-ing</string>
    <string name="action_settings">Settings</string>
    <string name="today_bottom_menu">Today</string>
    <string name="add_bottom_menu">Create</string>
    <string name="feed_bottom_menu">Feed</string>
    <string name="today_text">Today</string>
    <string name="add_task">Create task</string>
    <string name="short_Description">Short description</string>
    <string name="submit">Submit</string>
    <string name="full_description">Full description</string>
    <string name="task_added">Task added</string>
    <string name="requare_field">Requare field</string>
    <string name="add_notification">AddNotification</string>
    <string name="delete_task">Delete task</string>
    <string name="mark_task_shown">Delete notification</string>
    <string name="mark_task_not_shown">Add notification</string>

    <!--Task lifecycle-->
    <string name="create_task_lifecycle">Create new task</string>
    <string name="update_task_lifecycle">Update task</string>
    <string name="complete_task_lifecycle">Complete task</string>
    <string name="delete_task_lifecycle">Delete task</string>

    <!--Task action -->
    <string name="watch_task">WATCH</string>
    <string name="priority_hint">Priority</string>

</resources>
