<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.Fragments.AddTaskFragment">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/add_task"
                android:textColor="#ce3232"
                android:textSize="40sp"
                android:typeface="serif"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/priority_hint"
                    android:textSize="22sp" />

                <Spinner
                    android:id="@+id/priority_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <DatePicker
                android:id="@+id/date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TimePicker
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/short_description_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/short_Description"
                android:inputType="text" />

            <EditText
                android:id="@+id/full_description_text"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/full_description"
                android:fitsSystemWindows="true"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:padding="5dp" />

            <CheckBox android:id="@+id/add_notification_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_notification" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/submit"
                android:textColor="#FFF" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>